# palantir

./: # 팔란티어 엔지니어들의 최근 개발 동향 영어권 X 플랫폼 분석.md  .codex-config.json  .cursorrules  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  AGENTS.md  AI_AGENT_RULES.md  CONTRIBUTING.md  Dockerfile  Makefile  OFFLINE_ENV_README.md  PREPARE_OFFLINE_ENVIRONMENT_GUIDE.md  README.md  REPORT_DEP_UPGRADE.md  REPORT_NUMPY_LINUX_WHEEL.md  REPORT_NUMPY_UPGRADE.md  SUMMARY.md  Self-Improver.md  alembic.ini  build_log.txt  changelog_v5.1.md  coverage.xml  docker-compose.loki.yaml  docker-compose.yml  docker-entrypoint.sh  download_numpy_linux_wheel.py  install_dependencies.py  main.py  mkdocs.yml  mypy.ini  prometheus.yml  promptfoo.yaml  promptfooconfig.yaml  promtail-config.yml  pylintrc_utf8.ini  pyproject.toml  (+19 more)
.devcontainer/: devcontainer.json
.git-rewrite/: backup-refs  commit  message  parse  revs
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  docs.yml
apps/streamlit_ui/: auth.py
config/: default.yaml  development.env  logging.yaml  mypy.ini  offline.yaml  pylintrc_utf8.ini  rss_feeds.yaml  security.yaml
core/agents/: base.py
docs/: API_REFERENCE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DEVLOG.md  FAQ.md  FEATURE_PRD.md  POLICY.md  README.md  TODO_REDIS_STREAM.md  USAGE_EXAMPLES.md  agent.md  agents.md  ai_agent.md  architecture.md  deployment.md  generate_toc.py  grafana_setup_linux.md  grafana_setup_win.md  log.md  progress_report_2025-06-05.md  project_vision.md  troubleshooting.md  user_management.md
docs/development/: AUTH.md
docs/guides/: FAQ.md  grafana_setup_win.md
docs/project_plan/: engineering.md  env.md  integration.md  loop.md  orchestration.md  structure.md  파일요약.md
docs/references/: POLICY.md
docs/setup/: deployment.md
grafana/dashboards/: agent_metrics.json  api_metrics.json  auth_metrics.json  security_metrics.json  system_metrics.json  user_metrics.json
migrations/: env.py
migrations/versions/: 1e6fa565d79b_add_handler_and_parameters_schema_to_.py
models/: predict.py  train.py
monitoring/alertmanager/: alertmanager.yml
monitoring/elasticsearch/: elasticsearch.yml
monitoring/kibana/: kibana.yml
monitoring/logstash/: logstash.yml
monitoring/prometheus/: prometheus.yml
offline_preparation/: INSTALL_PYTHON_PACKAGES_OFFLINE.md  LOAD_DOCKER_IMAGES_OFFLINE.md  README.md  add_init_py.ps1  download_ml_assets.py  verify_env.py
ontology/: example_pipeline.yaml  models.py
palantir/: .coveragerc  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  __init__.py  ai_integration.py  changelog_v5.0.md  cli.py  docker-compose.loki.yaml  folder_tree.txt  install_dependencies.py  main.py  openapi.json  prometheus.yml  rag.py  resolved.txt  setup_codex_env.bat  setup_codex_env.ps1  setup_offline.ps1  sitecustomize.py  vector_store.py
palantir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
palantir/agents/: autogen_executor.py  langchain_executor.py
palantir/analysis/: analyzer.py  recommender.py
palantir/api/: actions.py  ai_endpoints.py  ask.py  auth.py  git_endpoints.py  metrics.py  ontology.py  pipeline.py  qa.py  registry.py  report.py  status.py  upload.py
palantir/auth/: config.py  email.py  manager.py  metrics.py  models.py  rate_limit.py  rbac.py  router.py  schemas.py  validators.py
palantir/core/: __init__.py  action_executor.py  agent_base.py  agent_impls.py  agents.py  api.py  auth.py  backup.py  base.py  cache.py  clip_embed.py  config.py  context_manager.py  database.py  docs.py  error_handlers.py  exceptions.py  git_manager.py  llm_manager.py  logging_config.py  mcp.py  metrics.py  models.py  monitoring.py  ontology.py  ontology_sync.py  orchestrator.py  pipeline.py  pipeline_schema.py  pipeline_transpiler.py  (+19 more)
pipeline_ui/: README.md  requirements.txt  rxconfig.py
reports/: dependency_tree.txt
requirements/: base.txt
scripts/: analyze_performance.py  backup.sh  check_wsl_env.py  cleanup_logs.sh  cleanup_temp.sh  create_test_user.py  deploy.sh  gen_missing_tests.py  gen_param_tests.py  gen_schema.py  generate_api_docs.py  generate_architecture_diagram.py  generate_performance_report.py  health_check.sh  init_db.py  migrate_database.py  migrate_pg.py  migrate_pydantic_v2.py  pdf_extract.py  profile.sh  run_finetuning.py  run_performance_tests.py  run_promptfoo_eval.py  run_ui.py  scan_docs.py  setup.sh  test_auth.py  update_ci.py
tests/: conftest.py  e2e_upload_report.py  test_agents.py  test_api.py  test_ask.py  test_auth.py  test_auth_security.py  test_base_agent.py  test_factory.py  test_integration.py  test_logging_loki.py  test_mcp.py  test_ontology.py  test_pipeline.py  test_rag_integration.py  test_status.py
ui/: auth.py
(+340 files in other folders)
