[tool.poetry]
name = "palantir"
version = "0.1.0"
description = "AI-powered end-to-end data pipeline"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "palantir"}]

[tool.poetry.dependencies]
python = "^3.12"
prefect = "^2.0"
duckdb = "^0.9.2"
networkx = "^3.2"
fastapi = "^0.109.0"
langchain = "^0.1.0"
openai = "^1.0.0"
streamlit = "^1.30.0"
streamlit-agraph = "^0.0.45"
streamlit-option-menu = "^0.3.6"
plotly = "^5.18.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
pydantic = "^2.5.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=palantir --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
exclude = [".venv", "venv", "build", "dist", "__pycache__", "docs/_build"]
select = ["E", "F", "I", "N"]
ignore = ["E501"] 