[tool.poetry]
name = "palantir"
version = "0.1.0"
description = "자가개선형 멀티에이전트 오케스트레이션 플랫폼"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "palantir"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
pydantic = "^2.6.0"
uvicorn = "^0.27.0"
sqlmodel = "^0.0.14"
httpx = "^0.26.0"
packaging = "^24.0"
numpy = "^1.26.0"
plotly = "^5.18.0"
langchain = "^0.1.0"
pyautogen = "^0.2.0"
chromadb = "^0.4.24"
pydantic-settings = "^2.1.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
matplotlib = "^3.8.0"
mlflow = "^2.8.0"
sentence-transformers = "^2.6.1"
streamlit = "^1.31.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
streamlit-echarts = "^0.4.0"
playwright = "^1.44.0"
playwright-stealth = "^1.0.6"
neo4j = "^5.14.0"
weaviate-client = "^4.4.0"
prometheus-client = "^0.19.0"
redis = "^5.0.1"
psutil = "^5.9.6"
APScheduler = "^3.10.4"
openpyxl = "^3.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pyarrow = "^15.0.0"
networkx = "^3.2.0"
beautifulsoup4 = "^4.12.0"
feedparser = "^6.0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
sphinx = "^7.1.0"
sphinx-rtd-theme = "^1.3.0"
promptfoo = "^0.1.0"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short --disable-warnings"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "S", "B", "A"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true 