[tool.poetry]
name = "palantir"
version = "0.1.0"
description = "자가개선형 멀티에이전트 오케스트레이션 플랫폼"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "palantir"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic = "^2.6.0"
uvicorn = "^0.27.0"
httpx = "^0.26.0"
packaging = "^23.2"
langchain = "^0.1.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
weaviate-client = "^4.7.0"
prometheus-client = "^0.19.0"
APScheduler = "^3.11.0"
python-multipart = "^0.0.6"
pandas = "^2.2.0"
networkx = "^3.2.0"
neo4j = "^5.14.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
psutil = "^5.9.6"
gitpython = "^3.1.42"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^25.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short --disable-warnings"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "S", "B", "A"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true 